Bug 348189 - A Table field with many columns can cause the edit widget to not show horizontal scroll bars
Summary: A Table field with many columns can cause the edit widget to not show horizon...
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.10
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL: https://mail.kde.org/pipermail/tellic...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-24 23:02 UTC by Robby Stephenson
Modified: 2015-05-25 02:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2015-05-24 23:02:42 UTC
Expanding a column width to the dialog width can cause columns to the right to be hidden and no horizontal scroll bar appears.

Reproducible: Always
Comment 1 Robby Stephenson 2015-05-25 02:07:18 UTC
Git commit 4e00b38df9b08c28090a485c092c5dabf32af5c5 by Robby Stephenson.
Committed on 25/05/2015 at 02:06.
Pushed by rstephenson into branch '2.3'.

Don't hide the horizontal scrollbar in the table widget

Tables with many columns could easily expand past the dialog widget.
Don't disable the horizontal scrollbar.
FIXED-IN: 2.3.11

M  +4    -0    ChangeLog
M  +1    -1    src/gui/tablefieldwidget.cpp

http://commits.kde.org/tellico/4e00b38df9b08c28090a485c092c5dabf32af5c5