Don't hide the horizontal scrollbar in the table widget

Tables with many columns could easily expand past the dialog widget.
Don't disable the horizontal scrollbar.

BUG: 348189
FIXED-IN: 2.3.11